Fix bug; add dieOut animation
Fix bug where next updated section could be Section 3 even if Section 3 was unused; add animation while calculating for inputs to fade out and be slowly cut off before showing results

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,5 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap');
 
+@keyframes dieOut {
+	from {
+		opacity: 1;
+		height: 800px;
+		overflow: hidden;
+	}
+
+	to {
+		opacity: 0;
+		display: none;
+		height: 0;
+		overflow: hidden;
+	}
+}
+
+.dieOut {
+	animation-duration: 3s;
+	animation-name: dieOut;
+	animation-iteration-count: 1;
+}
+
 body {
 	background-color: rgb(30, 50, 76);
 	color: #ddd;
